# bootstrap-doctor

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  implementation-notes.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: bootstrap-doctor-design.md
scripts/: verify
src/bootstrap_doctor/: __init__.py  budgets.py  cli.py  heuristics.py  judge.py  parsing.py  paths.py  safety.py  status.py  trim.py
tests/: conftest.py  test_budgets_fallback.py  test_cli.py  test_heuristics.py  test_integration_trim_cli.py  test_judge.py  test_parsing.py  test_paths.py  test_safety.py  test_status.py  test_trim.py
