[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bootstrap-doctor"
version = "0.1.0"
description = "Audit and trim OpenClaw bootstrap files that brush the ~12k char ceiling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Solomon Neas", email = "srneas@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/solomonneas/bootstrap-doctor"
Repository = "https://github.com/solomonneas/bootstrap-doctor"

[project.scripts]
bootstrap-doctor = "bootstrap_doctor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap_doctor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
