[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bootstrap-doctor"
version = "0.1.0"
description = "Audit and trim OpenClaw bootstrap files that brush the ~12k char ceiling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Solomon Neas", email = "srneas@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.31",
  "brigade-cli>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/escoffier-labs/bootstrap-doctor"
Repository = "https://github.com/escoffier-labs/bootstrap-doctor"

[project.scripts]
bootstrap-doctor = "bootstrap_doctor.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.5",
  "types-requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap_doctor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]
ignore = ["B017", "B905", "E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/bootstrap_doctor"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
