[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bootstrap-doctor"
version = "0.2.0"
description = "Audit and trim OpenClaw bootstrap files that brush the ~12k char ceiling."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Solomon Neas", email = "srneas@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/escoffier-labs/bootstrap-doctor"
Repository = "https://github.com/escoffier-labs/bootstrap-doctor"

[project.scripts]
bootstrap-doctor = "bootstrap_doctor.cli:main"

[project.optional-dependencies]
# brigade.budgets owns the canonical size thresholds. bootstrap-doctor ships a
# mirrored fallback so it runs standalone; install this extra to source the
# limits from brigade directly and stay in lockstep with the rest of the
# escoffier-labs tooling.
brigade = [
  "brigade-cli>=0.8.0",
]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.5",
  "types-requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap_doctor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]
ignore = ["B017", "B905", "E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/bootstrap_doctor"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# brigade is an optional dependency (the canonical source for the size budgets,
# imported with a runtime fallback in bootstrap_doctor.budgets). Don't fail
# typing when brigade-cli is not installed in the checkout.
[[tool.mypy.overrides]]
module = ["brigade.*"]
ignore_missing_imports = true
